Changelog next version
----------------------
* Use custom Jackson 3 object mapper in JsonPath (#1858) (thanks to gkiel for PR)

Changelog 5.5.7 (2026-01-16)
----------------------------
* Spring MockMvc module now supports Spring Framework 7.0 (thanks to Marcin Grzejszczak for PR)

Changelog 6.0.0 (2025-12-12)
----------------------------
* spring-mock-mvc module now supports Spring 7.x
* spring-web-test-client now supports Spring 7.x
* Upgraded commons-lang3 from 3.18.0 to 3.19.0
* The spring modules now required Spring 5.3+ (previously 5.1 was required)
* New minimum Java baseline is now 17
* New minimum Groovy base is now 5.x
* Support for Jackson 3 object mapping
* Support for Yasson 3 object mapping
* Support for jakarta JsonB/Johnzon 3 object mapping
* Migrate json-path fully to Java, bypass GroovyShell for evaluation (#1844) (thanks to Michael Edgar for PR)
    - This fixed some nasty memory leaks when using JsonPath heavily in long running processes
* Stop resetting ResponseParserRegistrar during build (#1759, #1505, #1207 & #978) (thanks to Marc Easen for PR)
* Skip Null filters in FilterContextImpl (#1834) (thanks to Boyarshinov Alexander for PR)
* Upgraded Kotlin extension module to use Kotlin 2.2.21

Changelog 5.5.6 (2025-08-15)
----------------------------
* Remove deprecated constructors in multipart handling (#1827) (thanks to Tobias Unger for PR)
* Fix NPE in RequestSpecificationImpl #1830 (thanks to Boyarshinov Alexander for PR)
* Bump commons-lang3 from 3.16.0 to 3.18.0 (thanks to Ash Skelton for PR)

Changelog 5.5.5 (2025-05-22)
---------------------------
* The rest-assured-bom project is back and works

Changelog 5.5.4 (2025-05-22)
---------------------------
* The rest-assured-bom project is back

Changelog 5.5.3 (2025-05-22)
---------------------------